Change History to use a list